# isolvocals

./: .gitignore  Makefile  README.md  pyproject.toml
isolvocals/: audio.py  env.py  main.py  media.py  models.py  utils.py
mmusic/: classifier.py  main.py  models.py  normal.py  utils.py
rmmusic/: env.py  models.py
scripts/: run
src/isolvocals/: env.py  main.py  media.py  models.py  utils.py
