[project]
name = "mmusic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansicolors>=1.1.8",
    "audioop-lts>=0.2.2",
    "click>=8.4.0",
    "numpy>=2.4.5",
    "pydub>=0.25.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
