[project]
name = "isolvocals"
version = "0.1.0"
description = "A terminal tool for playing media music-free"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ansicolors>=1.1.8",
    "click>=8.4.1",
    "deepfilternet[soundfile]",
    "torch",
    "torchaudio==2.3.1",
    "torchvision",
    "tqdm>=4.67.3",
]

[project.scripts]
isolvocal = "isolvocals.main:main"
