[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isolvocals"
version = "0.1.0"
description = "A terminal tool for playing media music-free"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "click>=8.4.1",
    "deepfilternet[soundfile]",
    "torch",
    "torchaudio==2.3.1",
    "torchvision",
    "tqdm>=4.67.3",
]

[project.scripts]
isolvocals = "isolvocals.main:main"

